#3-5. 가위바위보 완성하기

--- a/scissorsRockPaper/SRP.html
+++ b/scissorsRockPaper/SRP.html
@@ -20,6 +20,6 @@
       <button id="scissor" class="btn">가위</button>
       <button id="paper" class="btn">보</button>
     </div>
-    <script src="RSP.js"></script>
+    <script src="SRP.js"></script>
   </body>
 </html>
